--- a/views/layout/main.hbs
+++ b/views/layout/main.hbs
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Users</title>
+    <title>Testverktyg</title>
 </head>
 <body>
 <!-- Det är i taggen här under som Express och Handlebars skickar info -->
