Omfaktorering av kod
Trallalla

--- a/views/layout/main.hbs
+++ b/views/layout/main.hbs
@@ -1,9 +1,45 @@
 <html>
 <head>
-    <title>Testverktyg</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Test</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="style/styles.css" rel="stylesheet">
 </head>
 <body>
+<!-- Navbar -->
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+
+        <!-- Brand and Navbutton -->
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">Testverktyg</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+
+        <!-- Collapse Menu -->
+        <div class="collapse navbar-collapse" id="navbar-collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="/create">Skapa</a></li>
+                <li><a href="#">Redigera</a></li>
+                <li><a href="#">Statistik</a></li>
+                <li><a href="#">Dela</a></li>
+            </ul>
+            <button type="button" class="btn btn-default navbar-btn navbar-right">Logga In</button>
+        </div>
+    </div>
+</nav>
 <!-- Det är i taggen här under som Express och Handlebars skickar info -->
     {{{body}}}
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous"></script>
 </body>
 </html>
