--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,11 @@
 #features {
     margin-bottom: 75px;
 }
+
+.no-close .ui-dialog-titlebar-close{
+    display: none;
+}
+
+.ui-widget-overlay.ui-front { /* you want this */
+    opacity:.75;
+}
