--- a/views/create.hbs
+++ b/views/create.hbs
@@ -83,6 +83,6 @@
     });
 
     $('.removeButton').on('click', function() {
-        
+        $(this).parent().parent().first().remove();
     });
 </script>
