--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,7 +1,7 @@
 <!-- Content -->
 <div class="container" id="test">
     <div class="col-lg-8">
-        <div class="panel panel-default">
+        <div class="panel panel-default answerPanel">
 
             <!-- Title -->
             <div class="panel-heading">
