--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,8 +4,8 @@
 <!-- Jumbotron -->
 <div class="jumbotron">
     <div class="container">
-        {{#if this.username}}
-            <h1>Hej, {{this.username}}</h1>
+        {{#if username}}
+            <h1>Hej, {{username}}</h1>
         {{else}}
             <h1>Testverktyg!</h1>
         {{/if}}
