--- a/views/create.hbs
+++ b/views/create.hbs
@@ -29,11 +29,11 @@
                 <div id="answersBox">
                     <div class="input-group answer">
                     <span class="input-group-btn">
-                        <button class="btn btn-default removeButton" type="button" id="testButton">
+                        <button class="btn btn-default removeButton" type="button">
                             <span class="glyphicon glyphicon-remove"></span>
                         </button>
                     </span>
-                        <input type="text" class="form-control" placeholder="Svar 1" id="testInput">
+                        <input type="text" class="form-control" placeholder="Svar 1">
                     </div>
                     <div class="input-group answer">
                     <span class="input-group-btn">
@@ -65,18 +65,6 @@
 </footer>
 
 <script>
-    $('#testButton').on('click', function () {
-        var value = $('#testInput').val();
-        console.log(value);
-        $.ajax({
-            url: '/create',
-            data: {username: value},
-            type: 'POST',
-            success: function () {
-            }
-        });
-    });
-
     $('#addButton').on('click', function () {
         var answerCount = $('.answer').length + 1;
         $('#answersBox').append('<div class="input-group answer"> <span class="input-group-btn"> <button class="btn btn-default removeButton" type="button"> <span class="glyphicon glyphicon-remove"></span> </button> </span> <input type="text" class="form-control" placeholder="Svar '+ answerCount +'"> </div>')
@@ -85,5 +73,4 @@
     $(document).on('click', 'button.removeButton', function(events) {
         $(this).parents('div').eq(0).remove();
     });
-
 </script>
