--- a/views/partials/_loggedOutNavbar.hbs
+++ b/views/partials/_loggedOutNavbar.hbs
@@ -49,6 +49,7 @@
             data: {username: value},
             type: 'POST',
             success: function () {
+                location.reload();
             }
         });
     });
