--- a/views/partials/_loggedInNavbar.hbs
+++ b/views/partials/_loggedInNavbar.hbs
@@ -18,6 +18,7 @@
                 <li><a href="#">Redigera</a></li>
                 <li><a href="#">Statistik</a></li>
                 <li><a href="#">Dela</a></li>
+                <li><a href="/register">Registrera</a></li>
             </ul>
 
                 <button type="button" class="btn btn-default navbar-btn navbar-right" id="logout">Logga Ut</button>
