--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,80 +1,68 @@
 <div class="container">
-        <div class="row">
-            <div class="panel-heading">
-                <div class="panel-title text-center">
-                    <h1 class="title">Registrera Användare</h1>
-                    <hr />
-                </div>
-            </div>
-            <div class="col-md-5">
-                <form class="form-horizontal" method="post" action="#">
-
-                    <!-- First Name -->
-                    <div class="form-group">
-                        <label for="name" class="cols-sm-2 control-label">Förnamn</label>
-                        <div class="cols-sm-10">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-user fa" aria-hidden="true"></i></span>
-                                <input type="text" class="form-control" name="name" id="name"  placeholder="Förnamn"/>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Last Name -->
-                    <div class="form-group">
-                        <label for="email" class="cols-sm-2 control-label">Efternamn</label>
-                        <div class="cols-sm-10">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-envelope fa" aria-hidden="true"></i></span>
-                                <input type="text" class="form-control" name="email" id="email"  placeholder="Efternamn"/>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Email -->
-                    <div class="form-group">
-                        <label for="username" class="cols-sm-2 control-label">Email</label>
-                        <div class="cols-sm-10">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-users fa" aria-hidden="true"></i></span>
-                                <input type="text" class="form-control" name="username" id="username"  placeholder="Email"/>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Password -->
-                    <div class="form-group">
-                        <label for="password" class="cols-sm-2 control-label">Lösenord</label>
-                        <div class="cols-sm-10">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                                <input type="password" class="form-control" name="password" id="password"  placeholder="Lösenord"/>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Confirm Password -->
-                    <div class="form-group">
-                        <label for="confirm" class="cols-sm-2 control-label">Bekräfta Lösenord</label>
-                        <div class="cols-sm-10">
-                            <div class="input-group">
-                                <span class="input-group-addon"><i class="fa fa-lock fa-lg" aria-hidden="true"></i></span>
-                                <input type="password" class="form-control" name="confirm" id="confirm"  placeholder="Bekräfta Lösenord"/>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="form-group ">
-                        <button type="button" class="btn btn-primary btn-lg btn-block login-button">Registrera</button>
-                    </div>
-                </form>
+    <div class="row">
+        <div class="panel-heading">
+            <div class="panel-title text-center">
+                <h1 class="title">Registrera Användare</h1>
+                <hr/>
             </div>
         </div>
+        <div class="col-md-5">
+            <form id="registerForm">
+
+                <!-- First Name -->
+                <label for="name" class="cols-sm-2 control-label">Förnamn</label>
+                <input type="text" class="form-control" id="firstname" placeholder="Förnamn"/>
+
+                <!-- Last Name -->
+                <label for="email" class="cols-sm-2 control-label">Efternamn</label>
+                <input type="text" class="form-control" id="lastname" placeholder="Efternamn"/>
+
+                <!-- Email -->
+                <label for="username" class="cols-sm-2 control-label">Email</label>
+                <input type="text" class="form-control" id="email" placeholder="Email"/>
+
+                <!-- Password -->
+                <label for="password" class="cols-sm-2 control-label">Lösenord</label>
+                <input type="password" class="form-control" id="password" placeholder="Lösenord"/>
+
+                <!-- Confirm Password -->
+                <label for="confirm" class="cols-sm-2 control-label">Bekräfta Lösenord</label>
+                <input type="password" class="form-control" id="confirm" placeholder="Bekräfta Lösenord"/>
+
+                <!-- Register Button -->
+                <button type="button" class="btn btn-primary btn-lg btn-block login-button" id="registerButton">Registrera</button>
+            </form>
+        </div>
+    </div>
 </div>
+
+<script>
+    $('#registerButton').on('click', function () {
+        var password = $('#password').val();
+        var confirm = $('#confirm').val();
+
+        if (password != '' && password === confirm) {
+            $.ajax({
+                url: '/register',
+                method: 'post',
+                data: {
+                    firstname: $('#firstname').val(),
+                    lastname: $('#lastname').val(),
+                    email: $('#email').val(),
+                    password: password
+                },
+                success: function() {
+                    $('#registerForm')[0].reset();
+                }
+            });
+        } else {
+            console.log('Password not match');
+        }
+    });
+</script>
 
 <style>
     .row {
         margin-top: 50px;
-        padding: 10px
     }
 </style>
