--- a/views/partials/_loggedOutNavbar.hbs
+++ b/views/partials/_loggedOutNavbar.hbs
@@ -14,6 +14,9 @@
         <!-- Collapse Menu -->
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
+                <li>
+                    <a href="/register">Registrera</a>
+                </li>
             </ul>
 
             <button type="button" class="btn btn-default navbar-btn navbar-right" id="login" data-toggle="modal" data-target="#login-modal">Logga In</button>
