User role - navbars
Uppdaterat olika navbars beroende på användarens roll

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,8 +4,8 @@
 <!-- Jumbotron -->
 <div class="jumbotron">
     <div class="container">
-        {{#if username}}
-            <h1>Hej, {{username}}</h1>
+        {{#if fName}}
+            <h1>Hej, {{fName}}</h1>
         {{else}}
             <h1>Testverktyg!</h1>
         {{/if}}
