--- a/views/layout/main.hbs
+++ b/views/layout/main.hbs
@@ -15,7 +15,7 @@
 <body>
 <p id="navy">{{nav}}</p>
 <!-- Navbar -->
-{{#if this.username}}
+{{#if fName}}
     {{>_loggedInNavbar}}
 {{else}}
     {{>_loggedOutNavbar}}
