--- a/views/partials/_loggedInNavbar.hbs
+++ b/views/partials/_loggedInNavbar.hbs
@@ -1,26 +1,17 @@
-<nav class="navbar navbar-inverse navbar-static-top">
-    <div class="container">
+{{#if admin}}
 
-        <!-- Brand and Navbutton -->
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/">Testverktyg</a>
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-        </div>
+    {{>_adminNavbar}}
 
-        <!-- Collapse Menu -->
-        <div class="collapse navbar-collapse" id="navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="/create">Skapa</a></li>
-                <li><a href="#">Redigera</a></li>
-                <li><a href="#">Statistik</a></li>
-                <li><a href="#">Dela</a></li>
-            </ul>
+{{/if}}
 
-                <button type="button" class="btn btn-default navbar-btn navbar-right" id="logout">Logga Ut</button>
-        </div>
-    </div>
-</nav>
+{{#if teacher}}
+
+    {{>_teacherNavbar}}
+
+{{/if}}
+
+{{#if student}}
+
+    {{>_studentNavbar}}
+
+{{/if}}
