--- a/views/create.hbs
+++ b/views/create.hbs
@@ -53,7 +53,7 @@
                     <div class="modal-body">
                         <form>
                             <!-- Question -->
-                            <div class="form-group">
+                            <div class="form-group" id="question">
                                 <input type="text" class="form-control questionTitle" placeholder="Fråga?">
                             </div>
 
@@ -136,7 +136,19 @@
     });
 
     $('#saveQuestion').on('click', function() {
-        $('#questionBox').append('<div class="panel panel-default"><div class="panel-heading"><h3 class="panel-title">Fråga '+ $(".panel").length +'</h3></div><div class="panel-body"></div></div>');
+        var i = "";
+        $('.answer input').each(function() {
+            i += '<li class="list-group-item">'+ $(this).val() +'</li>';
+        });
+        $('#questionBox').append(`
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">`+ $("#question").find('input').val() +`</h3>
+            </div>
+            <div class="panel-body">
+                <ul class="list-group">`+ i +`</ul>
+            </div>
+        </div>`);
     });
 
 </script>
