--- a/views/partials/_loggedOutNavbar.hbs
+++ b/views/partials/_loggedOutNavbar.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-inverse navbar-static-top">
+<nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
 
         <!-- Brand and Navbutton -->
@@ -38,12 +38,7 @@
         </div>
     </div>
 </div>
-<!-- Error -->
-{{#if err}}
-    <div class="alert alert-danger" role="alert">
-        {{err}}
-    </div>
-{{/if}}
+
 
 <script>
     $('#loginButton').on('click', function (e) {
