Lagt till sidan dela(share)
Grunddesign

--- a/views/partials/_adminNavbar.hbs
+++ b/views/partials/_adminNavbar.hbs
@@ -17,7 +17,7 @@
                 <li><a href="/create">Skapa</a></li>
                 <li><a href="#">Redigera</a></li>
                 <li><a href="#">Statistik</a></li>
-                <li><a href="#">Dela</a></li>
+                <li><a href="/share">Dela</a></li>
                 <li><a href="/register">Registrera</a></li>
             </ul>
 
