--- a/views/results.hbs
+++ b/views/results.hbs
@@ -1,10 +1,10 @@
 <div class="container">
-    <div class="col-md-12">
+    <div class="col-md-4 col-md-offset-4">
         <h3 class="page-header">Välj test</h3>
         <form action="results" method="post">
             <select name="test" id="testResults" class="form-control"></select>
             <br>
-            <button type="button" class="btn btn-info" id="registerButton">Se resultat</button>
+            <button type="button" class="btn btn-info btn-block" id="registerButton">Se resultat</button>
         </form>
     </div>
 </div>
