Skapat sidan statistik(/statistics)
Basic layout/skelett

--- a/views/partials/_adminNavbar.hbs
+++ b/views/partials/_adminNavbar.hbs
@@ -16,7 +16,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/create">Skapa</a></li>
                 <li><a href="#">Redigera</a></li>
-                <li><a href="#">Statistik</a></li>
+                <li><a href="/statistics">Statistik</a></li>
                 <li><a href="/share">Dela</a></li>
                 <li><a href="/register">Registrera</a></li>
             </ul>
