--- a/views/partials/_teacherNavbar.hbs
+++ b/views/partials/_teacherNavbar.hbs
@@ -16,8 +16,8 @@
             <ul class="nav navbar-nav">
                 <li><a href="/create">Skapa</a></li>
                 <li><a href="#">Redigera</a></li>
-                <li><a href="#">Statistik</a></li>
-                <li><a href="#">Dela</a></li>
+                <li><a href="/statistics">Statistik</a></li>
+                <li><a href="/share">Dela</a></li>
             </ul>
 
             <button type="button" class="btn btn-default navbar-btn navbar-right" id="logout">Logga Ut</button>
