Uppdaterad layout statistik-sidan
Lagt till labels

--- a/views/statistics.hbs
+++ b/views/statistics.hbs
@@ -15,15 +15,15 @@
                   <table class="table" id="statsTable">
                       <br><br>
                       <tr>
-                          <th>Antal godkända resultat:</th>
+                          <th>Godkända resultat <span class="label label-success">Totalt antal</span></th>
                           <td>X</td>
                       </tr>
                       <tr>
-                          <th>Medelvärde, antal poäng:</th>
+                          <th>Poäng <span class="label label-primary">Medelvärde</span></th>
                           <td>X</td>
                       </tr>
                       <tr>
-                          <th>Medelvärde, tid:</th>
+                          <th>Tid <span class="label label-primary">Medelvärde</span></th>
                           <td>X</td>
                       </tr>
                   </table>
